# backend

./: .env.example  .gitignore  Dockerfile  README.md  db_backend.py  pyproject.toml  readme  readme.md  requirements.txt  structure.md
app/: main.py
app/api/: router.py
app/api/db/: base.py
app/api/routes/: __init__.py  admin.py  conversation.py  employee.py  reports.py
app/services/: conversation_service.py  data_service.py  llm_service.py
scripts/: create_tables.py
src/: main.py
src/api/: activity.py  auth.py  awards.py  common.py  conversation.py  hr.py  hr1.py  leave.py  leaves.py  messages.py  performance.py  sessions.py  summary.py  user.py  vibemeter.py
src/models/: schemas.py
src/services/: conversation_service.py  data_service.py  llm.py  supabase.py
